--- a/style.css
+++ b/style.css
@@ -27,14 +27,11 @@ nav a:hover { color: #58a6ff; }
 
 /* Sections */
 section { padding: 4em 3em; text-align: center; }
-
-/* Section colors */
-.section-hero { background-color: #000; color: #f5f5f5; }
+.section-hero { background-color: #000; }
 .section-about { background-color: #1c1c1c; }
 .section-ebay { background-color: #262626; }
 .section-socials { background-color: #333; }
 
-/* Headings */
 h1, h2 { color: #ffcd00; margin-bottom: 1em; }
 
 /* eBay Listings */
