--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Amatic SC", cursive;
   color: #f5f5f5;
   line-height: 1.6;
   background-color: #121212;
