--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:wght@400;700&family=Henny+Penny&display=swap');
+
+
 /* General Styles */
 body {
   margin: 0;
-  font-family: "Amatic SC", cursive;
+  font-family: "Averia Sans Libre", sans-serif;
   color: #f5f5f5;
   line-height: 1.9;
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 1.8rem;
+  font-weight: 400;
   background-color: #121212;
   transition: background-color 0.5s ease; /* smooth bg color transition */
 }
