--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background: rgba(30, 58, 138, 0.9);
+  background: rgba(30, 30, 30, 0.95);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -38,7 +38,7 @@ body {
 
 .hero nav a {
   display: inline-block;
-  color: #fff;
+  color: #1e3a8a;
   text-decoration: none;
   margin-left: 1.8rem;
   font-size: 1.3rem;
