--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ nav a:hover {
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: transparent;
 }
 
 /* Section background colors fallback */
