--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ nav a:hover {
   justify-content: center;
   text-align: center;
   background-color: transparent;
+  margin: 0;
   /*transition: background-color 1s ease;
 }
 
