--- a/style.css
+++ b/style.css
@@ -161,9 +161,9 @@ p {
 }
 
 .social-card img {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
+  width: 100%
+  height: 100%;
+  object-fit: scale-down;
   display: block;
   object-position: center;
 }
